# calci_ma

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  LICENSE  PIPELINE_TEST.md  README.md  WEBHOOK_TEST.md  calculator.py  pyproject.toml  setup.cfg  web_calculator.py
ansible/: ansible.cfg  deploy.sh  deploy.yml  inventory.ini
templates/: index.html
tests/: test_calculator.py
