[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-calc"
version = "0.1.0"
description = "Scientific calculator CLI (sqrt, factorial, ln, power)"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = ["pytest"]
requires-python = ">=3.8"
